Fix openapi config datastore by team path
