# docs/site/content/en/openapi/openapi.yaml
@@ -63,6 +63,29 @@ paths:
               schema:
                 format: int32
                 type: integer
+  /api/config/datastore/byTeam/{team}:
+    get:
+      tags:
+      - Config
+      description: Obtain list of configured datastores for particular team
+      operationId: datastores
+      parameters:
+      - name: team
+        in: path
+        description: name of the team to search for defined datastores
+        required: true
+        schema:
+          type: string
+        example: perf-team
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Datastore'
   /api/config/datastore/{id}:
     delete:
       tags:
@@ -97,29 +120,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DatastoreTestResponse'
-  /api/config/datastore/{team}:
-    get:
-      tags:
-      - Config
-      description: Obtain list of configured datastores for particular team
-      operationId: datastores
-      parameters:
-      - name: team
-        in: path
-        description: name of the team to search for defined datastores
-        required: true
-        schema:
-          type: string
-        example: perf-team
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Datastore'
   /api/config/keycloak:
     get:
       tags:
